--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
   <header>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
   </header>
+  
+  <nav>
+    <a href="recipes/lasagna.html">Lasagna</a>
+  </nav>
 </body>
 </html>
