Edit file index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <nav>
     <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/brownieCookies.html">Brownie Cookies</a>
   </nav>
 </body>
 </html>
