--- a/recipes/BrownieCookies.html
+++ b/recipes/BrownieCookies.html
@@ -27,3 +27,14 @@
     <li>1/4 teaspoon baking powder</li>
     <li>1/8 teaspoon salt</li>
 </ul>
+
+<h2>How to Make Brookies</h2>
+<p>
+    You’ll find a full, step-by-step recipe below — but here’s a brief overview of what you can expect when you make homemade brookies: 
+</p>
+<ol>
+    <li>Make the cookie dough and press it into a greased baking dish.</li>
+    <li>Make the brownie batter and spread it over the cookie layer.</li>
+    <li>Bake in the preheated oven until a toothpick comes out clean.</li>
+    <li>Cut the brookies into bars.</li>
+</ol>
