Edit files recipe

--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css" />
   <title>My Website</title>
 </head>
 <body>
-  <header>
     <h1>Odin Recipes</h1>
-  </header>
-  
-  <nav>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/brownieCookies.html">Brownie Cookies</a>
-  </nav>
+    <a class="recipe" href="recipes/lasagna.html">Lasagna</a>
+    <a class="recipe" href="recipes/brownieCookies.html">Brownie Cookies</a>
 </body>
 </html>
